--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_messaging: ^11.1.0
   http: ^0.12.2
+  intl: ^0.16.0
+  syncfusion_flutter_charts: ^18.4.46
 
 
   # The following adds the Cupertino Icons font to your application.
