--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.0
   syncfusion_flutter_charts: ^18.4.46
+  draw_graph: ^0.0.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
